<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:src="@drawable/check"/>
    
    <com.example.respondermedambulance.Widget.Atami_Regular
        android:layout_width="66dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/Done"/>

    <com.example.respondermedambulance.Widget.Atami_Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/color"
        android:text="@string/disc"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/ok"/>


</LinearLayout>