<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="123dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="123dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/check">
        </ImageView>
        <com.MedAmbulance.Widget.Atami_Bold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Done"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.MedAmbulance.Widget.Atami_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/doneText"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="200dp"
            android:layout_height="@dimen/filedHeight"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/LoginNow"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>
</LinearLayout>