<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverPhoneLogin">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="71dp"
        android:layout_marginTop="71dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/main_image"/>
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:id="@+id/div_mobile"
            android:layout_marginRight="@dimen/leftMergin"
            android:layout_marginLeft="@dimen/RightMergin"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="@dimen/filedHeight">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/div_mobile_edt"
                android:gravity="center_vertical"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="15dp"
                android:textAlignment="gravity"
                android:textSize="16dp">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/filedHeight"
            android:text="@string/CONTINUE"
            android:textAllCaps="false"
            android:id="@+id/phone_continue"
            android:backgroundTint="@color/tint"
            android:layout_marginRight="@dimen/RightMergin"
            android:layout_marginLeft="@dimen/leftMergin"
            android:textColor="@color/white"
            android:layout_marginTop="23dp"
            android:background="@drawable/button_border">

        </Button>

        <com.example.respondermedambulance.Widget.Atami_Regular
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="@dimen/h8"
            android:textColor="@color/color"
            android:text="@string/Verification2">

        </com.example.respondermedambulance.Widget.Atami_Regular>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/agree_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="25dp"
        android:orientation="vertical">


        <com.example.respondermedambulance.Widget.Atami_Regular
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="@dimen/h8"
            android:textColor="@color/agreed"
            android:text="@string/agreed">

        </com.example.respondermedambulance.Widget.Atami_Regular>

        <com.example.respondermedambulance.Widget.Atami_Regular
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:textColor="@color/terms"
            android:layout_marginTop="3dp"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/terms">

        </com.example.respondermedambulance.Widget.Atami_Regular>

    </LinearLayout>
</RelativeLayout>