<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Verification_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/main_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp">
            </ImageView>
            <com.MedAmbulance.Widget.Atami_Bold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Verification"
                android:textColor="@color/black"
               android:textSize="@dimen/HeadingSize"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:clickable="true"
                android:id="@+id/SignTextbutton"
                android:layout_marginRight="@dimen/RightMergin"
                android:layout_marginLeft="@dimen/leftMergin"
                android:layout_marginTop="50dp">
            </com.MedAmbulance.Widget.Atami_Bold>
            <com.MedAmbulance.Widget.Atami_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verifyText"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginRight="@dimen/RightMergin"
                android:layout_marginLeft="@dimen/leftMergin"
                android:layout_marginTop="20dp">
            </com.MedAmbulance.Widget.Atami_Regular>
            <com.MedAmbulance.Widget.OtpEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:layout_marginTop="30dp"
                android:inputType="number"
                android:layout_marginLeft="28.5dp"
                android:layout_marginRight="28.5dp"
                android:maxLength="6"
                android:textIsSelectable="false"
                android:textSize="20sp"/>
            <View
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/RightMergin"
                android:background="@color/color"
                android:layout_height="1dp">
            </View>
            <com.MedAmbulance.Widget.Atami_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/Didntgetacode"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/RightMergin">
            </com.MedAmbulance.Widget.Atami_Regular>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/filedHeight"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:id="@+id/done"
                android:textSize="@dimen/HeadingSize"
                android:layout_marginTop="60dp"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:layout_marginRight="@dimen/RightMergin"
                android:layout_marginLeft="@dimen/leftMergin">
            </Button>
            <com.MedAmbulance.Widget.Atami_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/policy"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/RightMergin">
            </com.MedAmbulance.Widget.Atami_Regular>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>