<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.MedAmbulance.Widget.Atami_Bold
        android:layout_width="match_parent"
        android:id="@+id/title"
        android:textColor="@color/solid_black"
        android:text="@string/cancelBooking"
        android:textSize="24dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="30dp">
    </com.MedAmbulance.Widget.Atami_Bold>
    <ListView
        android:layout_width="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"
        android:listSelector="@drawable/list_selector"
        android:divider="@color/solid_black"
        android:dividerHeight=".5dp"
        android:layout_above="@+id/bnuttonlayout"
        android:layout_height="wrap_content"
        android:id="@+id/list">
    </ListView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="2"
               android:id="@+id/bnuttonlayout"
             android:layout_alignParentBottom="true"
            android:layout_marginVertical="10dp"
        android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/solid_black"
                android:id="@+id/no"
                android:background="@drawable/btnbg"
                android:text="@string/DontCancel"
                android:textSize="14dp"
                android:layout_marginLeft="10dp"
                android:visibility="visible"
                android:textAllCaps="false">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/solid_black"
                android:text="@string/CancelRide"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btnbg"
                android:layout_marginRight="10dp"
                android:textSize="14dp"
                android:id="@+id/yes"
                android:textAllCaps="false">
            </Button>
        </LinearLayout>
</RelativeLayout>